[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
json = "0.12.4"
serde = "*"
serde_json = "*"
serde_derive = "*"
chrono = "0.4.19"
sha2 = "0.10.2"
base64 = "0.13.0"